# kish-turkish

./: .gitignore  Cargo.toml  Makefile  PERF_LOCAL.md  README.md  analysis_cache.json  kish_gui.py  main_move_benchmark.go  opening_book.json  variations.txt
Board/: minmax.go  move_detailed.go  table.go
UI/: engine.go  ui.go
cmd/console/: main_pro_search_v4.go
cmd/webui/: main.go
crates/kish/: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  LICENSE  PERFORMANCE.md  README.md  RULES.md
crates/kish/benches/: perft.rs
crates/kish/examples/: basic_game.rs  custom_position.rs  game_with_history.rs  perft.rs  perft_parallel.rs  perft_tt.rs
crates/kish/src/: action.rs  actiongen.rs  board.rs  game.rs  game_status.rs  lib.rs  perft.rs  square.rs  state.rs  team.rs
crates/kish/tests/: bug_impossible_path.rs  rules_capturing.rs  rules_draw.rs  rules_equipment.rs  rules_initial_setup.rs  rules_movement.rs  rules_notation.rs  rules_promotion.rs  rules_winning.rs
src/: app.rs  engine.rs  main.rs  opening_book.rs  persistent_cache.rs  variation_book.rs
webui/: index.html
