[package]
name = "kish_dama_studio"
version = "0.1.0"
edition = "2021"

[dependencies]
kish = { path = "crates/kish" }
eframe = { version = "0.34.2", default-features = false, features = ["default_fonts", "glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
